--- a/DroidDialer/res/values/strings.xml
+++ b/DroidDialer/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 	<string name="app_name">Tone Dialer</string>
 	<string name="button_contacts_name">Show Contacts</string>
-	<string name="enable_tone_name">Enable DTMF Tones</string>
-	<string name="enable_phone_name">Enable Cell Phone</string>
+	<string name="enable_tone_name">Enable DTMF Tone Dialing</string>
+	<string name="enable_phone_name">Enable Cell Phone Dialing</string>
 </resources>
