Preference strategy working (Tests:Fail) - Can't launch contacts from Preference Dialog

--- a/DroidDialer/res/values/strings.xml
+++ b/DroidDialer/res/values/strings.xml
@@ -3,5 +3,6 @@
 	<string name="app_name">Tone Dialer</string>
 	<string name="button_contacts_name">Show Contacts</string>
 	<string name="enable_tones_title">Tone dial</string>
-	<string name="enable_tones_summary">Dial with tones from speaker</string>
+	<string name="enable_tones_summaryOn">Dial with tones from speaker</string>
+	<string name="enable_tones_summaryOff">Dial normally on network</string>
 </resources>
