--- a/DroidDialer/res/values/strings.xml
+++ b/DroidDialer/res/values/strings.xml
@@ -27,9 +27,9 @@
 		code.</string>
 
 	<!-- Notification strings -->
-	<string name="ticker_tone_dial_on">Tone Dialing On</string>
-	<string name="ticker_tone_dial_off">Tone Dialing Off</string>
-	<string name="notification_title">Tone Dialing</string>
+	<string name="ticker_tone_dial_on">Tone Dial On</string>
+	<string name="ticker_tone_dial_off">Tone Dial Off</string>
+	<string name="notification_title">Tone Dial</string>
 	<string name="notification_text">Call over a land line, Mobile dialing diabled.
 	</string>
 </resources>
