--- a/DroidDialer/res/values/strings.xml
+++ b/DroidDialer/res/values/strings.xml
@@ -30,6 +30,10 @@
 	<string name="ticker_tone_dial_on">Tone Dial On</string>
 	<string name="ticker_tone_dial_off">Tone Dial Off</string>
 	<string name="notification_title">Tone Dial</string>
-	<string name="notification_text">Call over a land line, Mobile dialing diabled.
-	</string>
+	<string name="notification_text">Call over a land line, Mobile dialing disabled.</string>
+
+	<!-- Notify number -->
+	<string name="ticker_tone_dial">Tone Dial:</string>
+	<string name="notification_text_tone_dial">Last dialed:</string>
+
 </resources>
