Correct country and trunk messages - Still need improvement - Possibly contextual examples from contacts

--- a/ToneDial/res/values/strings.xml
+++ b/ToneDial/res/values/strings.xml
@@ -12,18 +12,18 @@
 	<string name="title_country_code_preference">Country Code</string>
 	<string name="summary_country_code_preference">Replace {0} with Trunk Code</string>
 	<string name="dialog_title_country_code_preference">Country Code</string>
-	<string name="dialog_message_country_code_preference">I will replace your Country Code with the Trunk
+	<string name="dialog_message_country_code_preference">I will replace this Country Code with the Trunk
 		Code.
-		Land line calls to dial people in this country do not use + or the country
+		Land line calls to people in this country do not use + or the country
 		code.</string>
 
 	<string name="default_value_trunk_code_preference">0</string>
 	<string name="title_trunk_code_preference">Trunk Code</string>
 	<string name="summary_trunk_code_preference">Country Code replaced by {0}</string>
 	<string name="dialog_title_trunk_code_preference">Trunk Code</string>
-	<string name="dialog_message_trunk_code_preference">I will replace the country code with this Trunk
+	<string name="dialog_message_trunk_code_preference">I will replace the Country Code with this Trunk
 		Code.
-		Land line calls to dial people in this country do not use + or the country
+		Land line calls to people in this country do not use + or the country
 		code.</string>
 
 	<!-- Notification strings -->
