Correct DTMF in README!

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A DTFM Tone Dial Android™ Application
+A DTMF Tone Dial Android™ Application
 
 This is our first Android Application, it aims to provide a simple tool
 that will allow you to dial a contact from your mobile using a landline.
