--- a/ToneDialUnlimited/res/values/strings.xml
+++ b/ToneDialUnlimited/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, ToneDialUnlimited!</string>
-    <string name="app_name">Tone Dial Unlimited</string>
+    <string name="app_name">Tone Dial</string>
 </resources>
